--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 __pycache__
-MetalCosfr_cp_for_STM_analysis-main
 .ipynb_checkpoints/
 data/GWTC4/
 pdet_gwbench_grid_making.log
-paper/*.aux
-paper/*.bbl
-paper/*.blg
-paper/*.fdb_latexmk
-paper/*.fls
-paper/*.log
-paper/*.out
-paper/*.synctex.gz
+*/*.aux
+*/*.bbl
+*/*.blg
+*/*.fdb_latexmk
+*/*.fls
+*/*.log
+*/*.out
+*/*.synctex.gz
